<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_error">Error</string>
    <string name="description">Describe your task here</string>
    <string name="task_name">Task Name</string>
    <string name="duration">Duration</string>
    <string name="add_task">Add Task</string>
    <string name="name">Name</string>
    <string name="task_description">Description</string>
    <string name="task_duration">Duration</string>
    <string name="task_priority">Priority</string>
    <string name="view_name"></string>
    <string name="view_description" />
    <string name="view_priority">Priority</string>
    <string name="view_priority_value">TextView</string>
    <string name="add_button">Add</string>
    <string name="back_button">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
