<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addFragment"
    android:background="#ADD8E6">

    <LinearLayout

        android:layout_width="400dp"
        android:layout_height="594dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516">

        <TextView
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/add_task"
            android:textColor="#01579B"
            android:textAlignment="center"
            android:textSize="12pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/task_description"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/task_duration"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/task_duration"
                android:inputType="number" />

            <EditText
                android:id="@+id/task_priority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/task_priority"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back_button" />

            <Button
                android:id="@+id/add_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_button" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>